--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <style>
     .demo-layout-transparent {
         background: url('https://getmdl.io/assets/demos/transparent.jpg') center / cover;
@@ -77,6 +78,54 @@
   color: #fff;
   background:url('../assets/demos/dog.png') bottom right 15% no-repeat #46B6AC;
 }
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body{
+  background: #f2f2f2;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00B4CC;
+  border-right: none;
+  padding: 5px;
+  height: 40px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 </style>
     </style>
   </head>
@@ -128,9 +177,9 @@
       <div class="demo-card-event mdl-card mdl-shadow--2dp">
         <div class="mdl-card__title mdl-card--expand">
           <h4>
-            Featured event:<br>
-            October 23 2020<br>
-            7-11pm
+            Codechef Internship Contest<br>
+            October 26, 2020<br>
+            6-9 pm
           </h4>
         </div>
         <div class="mdl-card__actions mdl-card--border">
@@ -147,7 +196,7 @@
           <h2 class="mdl-card__title-text">Update</h2>
         </div>
         <div class="mdl-card__supporting-text">
-          Updates on Jobs Click on the card to know updates
+          Codeforces Raiffeisenbank hiring round will be from 8:05 pm
         </div>
         <div class="mdl-card__actions mdl-card--border">
           <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
@@ -155,8 +204,14 @@
           </a>
         </div>
       </div>
-      <main class="mdl-layout__content">
-       </main>
+      <div class="wrap">
+          <div class="search">
+             <input type="text" class="searchTerm" placeholder="What are you looking for?">
+             <button type="submit" class="searchButton">
+               <i class="fa fa-search"></i>
+            </button>
+          </div>
+       </div>
     </div>
     </div>
   </body>
