made changes in newbranch

--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@ body{
 .wrap{
   width: 30%;
   position: absolute;
-  top: 70%;
-  left: 50%;
+  top: 80%;
+  left: 40%;
   transform: translate(-50%, -50%);
 }
+/* made few changes top from 70 to 80 and left 50 to 40 */
 </style>
     </style>
   </head>
   <body>
-    <!-- Uses a transparent header that draws on top of the layout's background -->
+   
     <div class="demo-layout-transparent mdl-layout mdl-js-layout">
       <header class="mdl-layout__header mdl-layout__header--transparent">
         <div class="mdl-layout__header-row">
